<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Monitor redova - SCNS</string>
    <string name="actionRefresh">Osveži</string>
    <string name="actionAddAlarm">Dodaj alarm</string>
    <string name="actionSettings">Opcije</string>
    <string name="init">Inicijalizacija</string>
    <string name="dataGathering">Prikupljanje podataka</string>
    <string name="oldData">Podaci nisu ažurni</string>
    <string name="noData">Podaci nedostupni</string>
    <string name="invalidData">Neispravni podaci</string>
    <string name="flow_pre">Prolaznost:</string>
    <string name="flow_post">klijenata po satu.</string>
    <string name="queue">Broj klijenata u redu:</string>
    <string name="lastChange">Poslednja promena:</string>
    <string name="dialogAddAlarmTitle">Dodaj novi alarm</string>
    <string name="dialogAddAlarm">Sačuvaj</string>
    <string name="dialogCancelAlarm">Odustani</string>
    <string name="ticketNumber">Broj tiketa:</string>
    <string name="window">Šalter:</string>
    <string name="na">/</string>
    <string name="ok">Uredu</string>
    <string name="alarm">Alarm</string>
    <string name="alarmText">Prozvan je broj za koji ste se prijavili</string>
    <string name="alarmSuccessfullyAdded">Alarm je uspešno dodat</string>
    <string name="ticketInvalid">Pogrešno unešen broj tiketa. Unesite sve cifre uključujući i početne nule.</string>
    <string name="ticketPassed">Tiket sa unešenim brojem je već prozvan.</string>
    <string name="alarmsForThisWindow">Postavljeni alarmi:</string>
    <string name="noAlarmsForThisWindow">(nema postavljenih alarma)</string>
    <string name="alarmDeleted">Alarm je poništen.</string>
    <string name="imgDescription"></string>
    <string name="expectedPassTime">Očekivano vreme prolaska:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settingsTitle">Podešavanja</string>
    <string name="choose">Odaberi</string>
    <string name="ringingEnabled">Zvono uključeno</string>
    <string name="vibratingEnabled">Vibracija uključena</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="refresh_interval">Interval osvežavanja: </string>
    <string name="seconds">sekundi</string>
    <string name="about_title">O programu</string>
    <string name="about_body">Verzija: 0.9.25 (beta)\nAutor: Aleksandar Beserminji\nbiserx@gmail.com</string>
    <string name="lastServerUpdate">Poslednja komunikacija sa serverom: </string>
	<string name="back">Nazad</string>
	<string name="eula_title">EULA</string>
	<string name="eula_body">Ova aplikacija preuzima stanje servisa sa sajta Studentskog centra Novog Sada i kao takva generiše određeni internet saobraćaj, za koji autor ove aplikacije nije odgovoran, kao ni za bilo kakvu štetu nastalu korišćenjem ove aplikacije.\nTakođe sve prikazane informacije su čisto informativnog karaktera i ne mogu se koristiti u druge svrhe.\nDa bi ste koristili ovu aplikaciju, potrebno je da prihvatite pravila korišćenja.\nUkoliko se ne slažete sa pravilima korišćenja ove aplikacije, potrebno je da aplikaciju ukolnite sa vašeg uređaja.</string>
</resources>
